[package]
name = "rust_leetcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "two_sum"
path = "src/arrays/two_sum/main.rs"


[[bin]]
name = "find_median_sorted_arrays"
path = "src/arrays/find_median_sorted_arrays/main.rs"
